# GMM_EM

./: .gitignore  CMakeLists.txt  README.md  test_lables.csv
dataset/: gaussian_predict_label.csv  labels.csv  sklearn_breast_label.csv  sklearn_iris_label.csv  test_lables.csv  three_gaussian.csv  two_gaussian.csv  two_gaussian_predict_label.csv  updated_version.csv
docs/ProblemStatementAndGoals/: ProblemStatement.tex
docs/SRS/: main.tex  references.bib
examples/: CMakeLists.txt  GMM  main.cpp  my_executable  stats_test.py  visualization.py  visualization2.py  visualization3.py
executable/: my_example  test_gmm  test_input  test_output
include/: GMM.h  KMeans.h  csv.hpp  input.h  mixture.hpp  output.h
src/: CMakeLists.txt  GMM.cpp  KMeans.cpp  input.cpp  main.cpp  output.cpp
src/GMM.dSYM/Contents/: Info.plist
test/: CMakeLists.txt  Input_test.cpp  Output_test.cpp  gmm_test.cpp  inputTest2.csv  kmean_test.cpp  main.cpp  test.cpp  test_labels.csv
